--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,4 +46,23 @@ h2 {
   width: 100%;
 }
 
+.fade-enter{
+  opacity: 0;
+  transform: scale(1.25);
+}
+.fade-enter.fade-enter-active{
+  opacity: 1;
+  transition: opacity .5s ease-in;
+  transform: scale(1);
+}
 
+.fade-exit{
+  opacity: 1;
+  transform: scale(1.25);
+}
+
+.fade-exit.fade-exit-active{
+  opacity: 0;
+  transition: opacity .5s ease-in;
+  transform: scale(1);
+}
